--- a/css/custom.css
+++ b/css/custom.css
@@ -7,7 +7,9 @@ button {
     margin: 5px 0;
     background-color: #fff;
     width: auto;
-    cursor: pointer; }
+    cursor: pointer; 
+    min-width: 150px;
+}
 
 button:hover {
     background-color: #f0f0f0; 
@@ -73,6 +75,11 @@ body{
 
     background-color: #ffffff;
     
+}
+
+
+.property__display{
+    margin: 0 5px;
 }
 
 
