--- a/css/custom.css
+++ b/css/custom.css
@@ -9,6 +9,9 @@ button {
     width: auto;
     cursor: pointer; 
     min-width: 150px;
+
+
+    font-size: 1rem;
 }
 
 button:hover {
@@ -29,7 +32,7 @@ button:hover {
 body{
     background-color: grey;
     font-family: 'Lato', sans-serif;
-
+    font-size: 10pt;
 }
 
 /*
