Added displays and colour
Displays added for total population and housing
Code updates this display every tick
Colours added for approaching and hitting the limit

--- a/css/custom.css
+++ b/css/custom.css
@@ -79,6 +79,12 @@ article{
 .property__increment--negative{
     color: red;
 }
+.caution{
+    color: orange;
+}
+.warning{
+    color: red;
+}
 
 
 button {
